--- a/css/_works.scss
+++ b/css/_works.scss
@@ -7,7 +7,7 @@
     }
 
     .carousel-block{
-        max-width: 40%;
+        max-width: 55%;
         margin: 2rem auto;
         padding: 0 7.5rem;
     }
@@ -68,7 +68,7 @@
                 bottom: 0;
                 left: 0;
                 right: 0;
-                margin: auto;
+                margin: auto 0;
             }
 
             .description{
@@ -90,7 +90,7 @@
             }
         }
         .paysage{
-            height: 500px;
+            min-height: 500px;
 
             img{
                 border-radius: 5px 5px 0 0;
@@ -178,7 +178,7 @@
 
 @include xl{
     .carousel-block{
-        max-width: 65% !important;
+        max-width: 75% !important;
     }
 }
 
